# sats-rover

./: .env.example  .gitignore  README.md  RoadMap_chatgpt.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  turbo.json
apps/api/: Dockerfile  README.md  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 2ef152b01cec_create_signals_table.py  3b8f6e4d1a20_add_signals_v2_events_dup_lookup_index.py  6c2f4b9d7e31_add_raw_event_payment_evidence_to_signals_v2_events.py  8d4f9c0a1b2e_create_checkin_submissions_table.py  9f4c2d7a1b11_add_ingest_hash_to_places.py  a7d1c8e5f2b4_convert_places_tags_to_jsonb.py  c3e9b2f4a1d0_add_ingestion_state_table.py  f1a7c9d2e4b6_ingestion_state_legacy_value_compat.py
apps/api/app/: main.py
apps/api/app/api/v1/: checkins.py  places.py  signals.py
apps/api/app/core/: settings.py
apps/api/app/models/: __init__.py
apps/api/app/schemas/: signal.py
apps/api/app/services/: ingestion_service.py  places_service.py  signals_service.py
apps/api/scripts/: ingest_btcmap.py  wait_for_db.py
apps/api/tests/: __init__.py  test_checkins_http_integration.py  test_debug_checkins.py  test_debug_counts.py  test_debug_signals.py  test_ingestion_service.py  test_places_and_signals.py  test_route_guards.py  test_signals_service_find_same_day_duplicate.py  test_signals_service_is_event_ingested.py  test_signals_service_missing_relation.py
apps/indexer/: package.json
docs/: architecture.md  local-dev.md
frontend/: btcmap.txt  docker-compose.yml  package.json  pnpm-lock.yaml
(+311 files in other folders)
